# lgrep

./: .env.example  .gitignore  .lgrepignore  .lgrepignore.example  CHANGELOG.md  README.md  conftest.py  project.json  pyproject.toml
.adv/: backlog.jsonl
.adv/archive/2026-02-06-lgrepLocalSemanticCodeSearchPl/: ARCHIVE_SUMMARY.md
.adv/archive/2026-02-07-multiProjectSupportConcurrentI/: ARCHIVE_SUMMARY.md  change.json
.adv/archive/2026-02-07-understandAndOptimizeLgrepTool/: ARCHIVE_SUMMARY.md
.adv/archive/2026-02-08-createFullSpec/: ARCHIVE_SUMMARY.md  change.json
.adv/archive/2026-05-11-improveLgrepStaleIndex/: ARCHIVE_SUMMARY.md  agreement.md  change.json  design.md  problem-statement.md  proposal.md
.adv/archive/2026-05-20-addWorktreeAwareCacheLifecycle/: ARCHIVE_SUMMARY.md  agreement.md  change.json  design.md  proposal.md  wisdom.json
.adv/archive/2026-05-22-fixSemanticSearchDeadlines/: ARCHIVE_SUMMARY.md  CONTRACT_TRACEABILITY.md  acceptance.md  agreement.md  change.json  design.md  executive-summary.md  problem-statement.md  proposal.md
.adv/archive/2026-05-27-fixDaemonSafety/: ARCHIVE_SUMMARY.md  CONTRACT_TRACEABILITY.md  acceptance.md  agreement.md  change.json  design.md  executive-summary.md  problem-statement.md  proposal.md  wisdom.json
.adv/archive/2026-06-10-fixLgrepPoolWedgeAbandoned/: ARCHIVE_SUMMARY.md  CONTRACT_TRACEABILITY.md  acceptance.md  change.json  executive-summary.md  proposal.md  wisdom.json
.adv/archive/2026-07-04-updateReadmePositioning2/: ARCHIVE_SUMMARY.md  BRIEFING_DIGEST.md  CONTRACT_TRACEABILITY.md  acceptance.md  change.json  executive-summary.md  proposal.md
.adv/archive/2026-07-21-addPrunePolishBundle/: ARCHIVE_SUMMARY.md  BRIEFING_DIGEST.md  CONTRACT_TRACEABILITY.md  acceptance.md  change.json  executive-summary.md  proposal.md  spec-projection.json  summary.v1.json
.adv/archive/2026-07-21-addSymbolStorePrune/: ARCHIVE_SUMMARY.md  BRIEFING_DIGEST.md  CONTRACT_TRACEABILITY.md  acceptance.md  change.json  executive-summary.md  proposal.md  spec-projection.json  summary.v1.json
.adv/archive/2026-07-23-addSkipStalenessReindexFlag/: ARCHIVE_SUMMARY.md  BRIEFING_DIGEST.md  acceptance.md  (+6 more)
.github/workflows/: auto-release.yml  ci.yml
docs/: repo-improve-prep.md
docs/specs/: lgrep-symbol-store-lifecycle.md  lgrepSemanticCacheLifecycle.md  lgrepToolSelectionOptimization.md
examples/: opencode.json
instructions/: lgrep-tools.md
skills/lgrep/: SKILL.md
src/lgrep/: __init__.py  __main__.py  _jsonc.py  chunking.py  cli.py  discovery.py  embeddings.py  exceptions.py  indexing.py  install_opencode.py  server.py  storage.py  watcher.py
tests/: __init__.py  test_benchmark_latency.py  test_chunking.py  test_cli.py  test_cli_symbols.py  test_conflict_markers.py  test_daemon_runtime.py  test_deps.py  test_diagnostics.py  test_discovery.py  test_e2e_symbols.py  test_embeddings.py  test_embeddings_async.py  test_index_store.py  test_indexing.py  test_install_opencode.py  test_integration.py  test_jsonc.py  test_jsonc_installer.py  test_parser.py  test_parser_errors.py  test_prune_orphans.py  test_prune_symbols.py  test_renames.py  test_runtime_cancellation.py  test_security.py  test_server.py  test_server_registration.py  test_server_tools.py  test_storage.py  test_symbol_tools.py  test_token_tracker.py  test_tool_routing.py  test_watcher.py  test_worktree_cache.py
tools/opencode/: lgrep.ts
(+43 files in other folders)
